[tool.poetry]
name = "lazysequence"
version = "0.3.0"
description = "lazysequence"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/lazysequence"
repository = "https://github.com/cjolowicz/lazysequence"
documentation = "https://lazysequence.readthedocs.io"
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/lazysequence/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^0.15.8"}
sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
black = "^21.11b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
Pygments = "^2.10.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["lazysequence"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
